// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Utils buttonFrom passes any custom overrides 1`] = `
<ForwardRef(Button)
  foo="bar"
  loadingLabel="Loading"
  size="default"
  type="submit"
>
  <span>
    button content
  </span>
</ForwardRef(Button)>
`;

exports[`Button Utils buttonFrom renders correctly 1`] = `
<ForwardRef(Button)
  disabled={false}
  loadingLabel="Loading"
  size="default"
>
  <span>
    button content
  </span>
</ForwardRef(Button)>
`;

exports[`Button Utils buttonsFrom renders correctly 1`] = `
<Button.Group>
  <ForwardRef(Button)
    action={
      Object {
        "content": <span>
          foo
        </span>,
      }
    }
    loadingLabel="Loading"
    size="default"
  >
    <span>
      button 1 content
    </span>
  </ForwardRef(Button)>
  <ForwardRef(Button)
    action={Object {}}
    loadingLabel="Loading"
    size="default"
  >
    <span>
      button 2 content
    </span>
  </ForwardRef(Button)>
</Button.Group>
`;
